src/css/content.css
#main-body {
    max-width: 100%;
    overflow: hidden;
}

#text-color {
    color: white;
}

.circle {
    width: 102px;
    height: 102px;
    border-radius: 50%;
    background: #C4C4C4;
    opacity: 0.4;
    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.16);
}

#web {
    position: absolute;
    width: 600px;
    height: 400px;
    left: 0px;
    top: 0px;
    background-image: url(../images/Groupweb-vector.svg);

}

#top-gradient {
    position: absolute;
    width: 100%;
    height: 160px;
    left: 0px;
    top: 60px;
    background: linear-gradient(180deg, #BCF3EF 0%, #FFFFFF 100%);
}

#ellipse-181 {
    height: 136px;
    width: 136px;
    left: 86px;
    top: 687px;
    border-radius: 50%;
    background: #5ED9D1;
    opacity: 0.4;
    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.16);
}

#ellipse-182 {
    width: 136px;
    height: 136px;
    left: 246px;
    top: 687px;
    border-radius: 50%;
    background: #237B75;
    opacity: 0.4;
    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.16);
}

#ellipse-183 {
    width: 136px;
    height: 136px;
    left: 406px;
    top: 687px;
    border-radius: 50%;
    background: #49CE8B;
    opacity: 0.4;
    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.16);
}

#fish {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    left: 50px;
    background-color: rgba(0, 255, 255, 0.527);
    color: white;
    /* opacity: 0.4; */
    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.16);
}

#nav-color {
    background: linear-gradient(90deg, #030332 0%, #171753 100%);
}

#title {
    position: absolute;
    width: 458px;
    height: 56px;
    right: 407px;
    top: 261px;
    font-family: Catamaran;
    font-style: normal;
    font-weight: 600;
    font-size: 40px;
    line-height: 56px;
    letter-spacing: 0.03em;
    color: #171753;
}

#title-text {
    position: absolute;
    width: 601px;
    height: 72px;
    right: 264px;
    top: 321px;
    font-family: Catamaran;
    font-style: normal;
    font-weight: normal;
    font-size: 24px;
    line-height: 36px;
    letter-spacing: 0.03em;
    color: #171753;
}

.text-small {
    font-family: Catamaran;
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 28px;
    letter-spacing: 0.03em;
    color: #171753;
}

#what-koi {
    position: relative;
    width: 100%;
    /* overflow: hidden; */
    height: 32px;
    left: 150px;
    top: 556px;
}

#group-246 {
    position: relative;
    max-width: 100%;
    display: flex;
    justify-content: center;
    left: 600px;
    top: 573px;
}

#ellipse-176 {
    position: relative;
    width: 82px;
    height: 82px; 
    top: 100px;
    background: #C4C4C4;
}

#ellipse-177 {
    position: relative;
    width: 82px;
    height: 82px;
    left: 2px;
    background: #C4C4C4;
}

#ellipse-178 {
    position: relative;
    width: 82px;
    height: 82px;
    top: 100px;
    right: 2px;
    background: #C4C4C4;
}


#mid-attention {
    position: relative;
    width: 720px;
    height: 95px;
    left: 30%;
    top: 832px;
    text-align: center;
}

/* #mid-content {
    position: relative;
    width: 443px;
    height: 28px;
    right: 609px;
    top: 1264px;
} */

#mission {
    position: relative;
    width: 587px;
    height: 32px;
    left: 150px;
    top: 1010px;
}

#mission-ops {
    position: relative;
    width: 399px;
    height: 64px;
    right: 630px;
    left: 124px;
    top: 1416px;
    flex-direction: row;
}

#miss1 {
    position: relative;
    top: 1080px;
    left: 1150px;
    flex-direction: column;
    flex: 20%;
}

#miss2 {
    position: relative;
    top: 1000px;
    flex: 60%;
    left: 450px;
    flex-direction: column;
}

#lower-177 {
    position: absolute;
    left: 100px;
    width: 82px;
    height: 82px;
    background: #C4C4C4;
}

#ops-text-one {
    position: relative;
    top: 100px;
    right: 50px;
    width: 399px;
    height: 64px;
    font-family: Catamaran;
    font-style: normal;
    font-weight: 600;
    font-size: 20px;
    line-height: 32px;
    text-align: center;
    letter-spacing: 0.03em;
    color: #171753;
}

#ellipse-184 {
    position: relative;
    left: 100px;
    width: 82px;
    height: 82px;
    background: #C4C4C4;
}

#ops-text-two {
    position: relative;
    width: 399px;
    height: 64px;
    right: 50px;
    font-family: Catamaran;
    font-style: normal;
    font-weight: 600;
    font-size: 20px;
    line-height: 32px;
    text-align: center;
    letter-spacing: 0.03em;
    color: #171753;
}

#special {
    position: relative;
    width: 280px;
    height: 108px;
    left: 159px;
    top: 1316px;
}

#special-font {
    font-family: EB Garamond;
    font-style: italic;
    font-weight: normal;
    font-size: 24px;
    line-height: 36px;
    letter-spacing: 0.03em;
    color: #171753;
}

#resources {
    position: absolute;
    width: 687px;
    height: 84px;
    left: 30%;
    top: 1653px;
}

#access {
    position: relative;
    width: 578px;
    height: 140px;
    left: 60%;
    top: 1176px;
}

#value {
    position: relative;
    width: 587px;
    height: 32px;
    left: 33%;
    top: 1333px;
    text-align: center;
}

#value-text {
    position: absolute;
    width: 658px;
    height: 28px;
    right: 247px;
    top: 2081px;
    text-align: center;
}

#ellipse-206 {
    box-shadow: 0px 2px 24px 3px rgba(255, 165, 75, 0.75);
}

#ellipse-206-location {
    position: relative;
    left: 633px;
    top: 1413px;
    /* box-shadow: 0px 2px 24px 3px rgba(255, 165, 75, 0.75); */
}

#ellipse-201 {
    position: relative;
    left: 875px;
    top: 1250px;
}

#ellipse-202 {
    position: relative;
    left: 1117px;
    top: 1083px;
}

#swipe-card {
    position: absolute;
    width: 100%;
    height: 188px;
    left: 0px;
    top: 2569px;
    text-align: center;
    background: #FFFFFF;
    box-shadow: 0px 2px 24px 2px rgba(0, 0, 0, 0.16);
}

#create-card {
    position: relative;
    width: 720px;
    height: 112px;
    left: 31%;
    top: 1485px;
    text-align: center;
}

#green-card {
    position: absolute;
    text-align: center;
    width: 100%;
    height: 100px;
    left: 0px;
    top: 3073px;
    background: #9BE7C4;
}

#team {
    position: relative;
    width: 152px;
    height: 32px;
    left: 47%;
    top: 1821px;
}

#join {
    position: relative;
    text-align: center;
    width: 100%;
    height: 100px;
    bottom: 100px;
    left: 0px;
    top: 2037px;
    background: #FFC78F;
}

/* #footer {
    position: absolute;
    width: 1152px;
    height: 552px;
    background: linear-gradient(90deg, #030332 0%, #171753 100%);
} */

